Reste correction overflow raah

--- a/anim.css
+++ b/anim.css
@@ -147,4 +147,51 @@
     opacity: 1;
     transform: scale(1);
   }
+}
+@keyframes popText {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes animDot {
+  0% {
+    transform: translateY(0);
+  }
+  30% {
+    transform: translateY(-2px);
+  }
+  60% {
+    transform: translateY(0);
+  }
+}
+@keyframes animPieces {
+  from {
+    opacity: 0;
+    transform: translate(calc(-50% + 15px), calc(-50% + 11px)) scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: translate(calc(-50% + 15px), calc(-50% + 11px)) scale(1);
+  }
+}
+@keyframes animOpenedRight {
+  from {
+    transform: translate(32px, -24px) rotate(10deg);
+  }
+  to {
+    transform: translate(32px, -24px) rotate(9deg);
+  }
+}
+@keyframes animOpenedLeft {
+  from {
+    transform: translate(-32px, -24px) rotate(-10deg);
+  }
+  to {
+    transform: translate(-32px, -24px) rotate(-9deg);
+  }
 }/*# sourceMappingURL=anim.css.map */
